Figured out why all gardens weren't loading. item_garden_list.xml had height as match parent! Whoops.

--- a/app/src/main/res/layout/activity_garden_save.xml
+++ b/app/src/main/res/layout/activity_garden_save.xml
@@ -11,7 +11,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".GardenInfoActivity">
+        tools:context=".GardenSaveActivity">
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/extendedFABallGardens"
