--- a/app/src/main/res/layout/activity_plant_save.xml
+++ b/app/src/main/res/layout/activity_plant_save.xml
@@ -11,22 +11,23 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".PlantInfoActivity">
+        tools:context=".PlantSaveActivity">
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
 
+            android:id="@+id/extendedFabAllPlants"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_top_100"
             android:contentDescription="@string/view_all_gardens"
-            android:text="@string/view_all_gardens"
+            android:text="@string/view_garden"
             app:icon="@drawable/back_suggest_icon"
-            app:layout_goneMarginTop="@dimen/margin_top_100"
             app:layout_constraintBottom_toTopOf="@+id/imageViewSeedling1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.081"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_goneMarginTop="@dimen/margin_top_100" />
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/extendedFabSavePlant"
@@ -47,9 +48,10 @@
             android:layout_width="@dimen/adding_image_width"
             android:layout_height="@dimen/adding_image_height"
             android:contentDescription="@string/seedling_content_description"
+            android:layout_marginTop="@dimen/margin_top_100"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf=""
+            app:layout_constraintTop_toBottomOf="@id/extendedFabAllPlants"
             app:srcCompat="@drawable/little_seedling" />
 
         <TableLayout
