--- a/app/src/main/res/layout/activity_garden_save.xml
+++ b/app/src/main/res/layout/activity_garden_save.xml
@@ -23,7 +23,7 @@
             app:layout_constraintBottom_toTopOf="@+id/imageViewSeedling2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.081"
-            android:layout_marginTop="@dimen/margin_top_100"
+            android:layout_marginTop="@dimen/margin_top"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
