Made adjustments to save garden and save plant, fixed some issues for the recycler view's click events caused by a card view within a constraint layout

--- a/app/src/main/res/layout/activity_plant_save.xml
+++ b/app/src/main/res/layout/activity_plant_save.xml
@@ -137,7 +137,7 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="@string/example_height"
-                    android:inputType="number"
+                    android:inputType="text"
                     android:textSize="@dimen/edit_text_size" />
             </TableRow>
 
