--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,5 +18,6 @@
     <color name="primaryTextColor">#000000</color>
     <color name="secondaryTextColor">#000000</color>
     <color name="mediumGray">#A9A9A9</color>
+    <color name="lightGray">#E7E5EA</color>
 
 </resources>
