--- a/app/src/main/res/layout/activity_individual_plant.xml
+++ b/app/src/main/res/layout/activity_individual_plant.xml
@@ -43,6 +43,7 @@
                 android:textAllCaps="false"
                 android:textSize="@dimen/heading_font_size"
                 android:textStyle="bold"
+                android:layout_marginBottom="@dimen/button_margins"
                 tools:text="Plant Name" />
 
             <ImageView
